# json-vs-bin

./: Cargo.toml  README.md
benches/: benchmarks.rs
src/: data.rs  formats.rs  lib.rs  main.rs  vector_data.rs
