[package]
name = "json-vs-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
bson = "2.9.0"
ciborium = "0.2.2"
serde = "1"
serde_json = "1"
zvariant = "4"
criterion = "0.5"
tokio = { version = "1.36.0", features = ["rt", "sync", "rt-multi-thread"] }
