[package]
name = "json-vs-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
bson = { version = "3.0.0", features = ["serde", "time-0_3"] }
ciborium = "0.2.2"
serde = "1.0.219"
serde_json = "1.0.143"
zvariant = "5.7.0"
criterion = "0.7.0"
bincode = { version = "2.0.1", features = ["serde"] }
bitcode = { version = "0.6.7", features = ["serde"] }
simd-json = "0.15.1"
